tests/types/told_pragma_syntax2.nim
discard """
  errormsg: "invalid indentation"
"""

type Bar {.final.} [T] = object
